Apply visual design to glossary pages.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1309 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_help.html
+++ b/gobotany/simplekey/templates/simplekey/_help.html
@@ -1,9 +1,10 @@
 {% extends "simplekey/_base.html" %}
 
-{% block title %}{% block pagetitle %}{% endblock %} - Help{% endblock %}
+{% block title %}{% block pagetitle %}{% endblock %}: Help{% endblock %}
 
 {% block body %}
-    <body id="getting-started" class="claro app getting-started">
+<body id="{% block body_id %}{% endblock %}"
+    class="claro app {% block body_class %}{% endblock %}">
         {% include "simplekey/_header.html" %}
 
         {% block content %}{% endblock %}
