--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -1,8 +1,9 @@
 {% extends "simplekey/_help.html" %}
 
-{% block pagetitle %}
-Getting Started
-{% endblock %}
+{% block pagetitle %}Getting Started{% endblock %}
+
+{% block body_id %}getting-started{% endblock %}
+{% block body_class %}getting-started{% endblock %}
 
 {% block content %}
         <div class="content">
