Make the sidebar on each glossary page adjust dynamically based on the content height, as is done elsewhere.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1311 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_glossary.html
+++ b/gobotany/simplekey/templates/simplekey/help_glossary.html
@@ -66,6 +66,8 @@ dojo.require('gobotany.sk.glossary');
 dojo.addOnLoad(function() {
     glossary_helper = gobotany.sk.glossary.GlossaryHelper();
     glossary_helper.setup();
+
+    global_setSidebarHeight();
 });
 </script>
 {% endblock %}
