Adjust the breadcrumb navigation throughout to use 'My Plant' as the fourth item. Correct the current-item highlight on the pile page when coming from the Getting Started page and electing to skip it from now on.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1312 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -16,16 +16,15 @@
                                     href="/help/start/"><img
                                     src="/static/images/icons/start.png" 
                                     alt=""> Start: Help</a></li>
-                                <li class="second upcoming"><a 
-                                    href="{% url simplekey-page 1 %}"><img
+                                <li class="second upcoming"><a><img
                                     src="/static/images/icons/group.png"
-                                    alt=""> Choose Group</a></li>
+                                    alt=""> Group</a></li>
                                 <li class="third upcoming"><a><img
                                     src="/static/images/icons/group.png" 
-                                    alt=""> Group</a></li>
+                                    alt=""> Subgroup</a></li>
                                 <li class="last upcoming"><a><img 
                                     src="/static/images/icons/subgroup.png" 
-                                    alt=""> Subgroup</a></li>
+                                    alt=""> My Plant</a></li>
                             {% else %}
                                 <li class="first completed"><a
                                     href="{% url simplekey-page 1 %}"><img
