--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -16,18 +16,17 @@
                                     src="/static/images/icons/start.png" alt=""> Start: Help</a></li>
                                 <li class="second current"><a 
                                     {% if page.number > 1 %}href="{% url simplekey-page 1 %}"{% endif %}><img
-                                    src="/static/images/icons/group.png" alt=""> Choose
-                                    Group</a></li>
-                                <li class="third upcoming"><a><img
                                     src="/static/images/icons/group.png" alt=""> Group</a></li>
-                                <li class="last upcoming"><a><img 
+                                <li class="third upcoming"><a><img
                                     src="/static/images/icons/subgroup.png" alt=""> Subgroup</a></li>
+                                <li class="last upcoming"><a><img 
+                                    src="/static/images/icons/subgroup.png" alt=""> My Plant</a></li>
                             {% else %}
-                                {% if page.number > 1 %}
+                                {% if page.number > 1 or '/help/start' in request.META.HTTP_REFERER %}
                                     <li class="first completed"><a href="{% url simplekey-page 1 %}"><img
                                         src="/static/images/icons/start.png" alt=""> Start</a></li>
                                     <li class="second current"><a><img
-                                        src="/static/images/icons/group.png" alt=""> Choose Group</a></li>
+                                        src="/static/images/icons/group.png" alt=""> Group</a></li>
                                 {% else %}
                                     <li class="first current"><a><img
                                         src="/static/images/icons/start.png" alt=""> Start</a></li>
@@ -36,6 +35,8 @@
                                 {% endif %}
                                 <li class="third upcoming"><a><img 
                                     src="/static/images/icons/subgroup.png" alt=""> Subgroup</a></li>
+                                <li class="last upcoming"><a><img 
+                                    src="/static/images/icons/subgroup.png" alt=""> My Plant</a></li>
                             {% endif %}
 
                         </ul>
