--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -12,36 +12,26 @@
                     <div id="breadcrumb">
                         <ul>
                             {% if 'skip_help_start' in request.COOKIES.keys and request.COOKIES.skip_help_start != 'y' %}
-                            <li class="first completed"><a 
-                                href="/help/start/"><img
-                                src="/static/images/icons/start.png" 
-                                alt=""> Start: Help</a></li>
-                            <li class="second completed"><a 
-                                href="{% url simplekey-page 1 %}"><img
-                                src="/static/images/icons/group.png" 
-                                alt=""> Choose Group</a></li>
-                                <li class="third completed"><a
-                                    href="{% url simplekey-pilegroup pilegroup.slug %}"><img
-                                    src="/static/images/icons/group.png" 
-                                    alt=""> {{ pilegroup.name }}</a></li>
-                                <li class="last current"><a><img
-                                    src="/static/images/icons/subgroup.png"
-                                    alt=""> 
-                                    {{ pile.name }}</a></li>
+                                <li class="first completed"><a 
+                                    href="/help/start/"><img
+                                    src="/static/images/icons/start.png" 
+                                    alt=""> Start: Help</a></li>
                             {% else %}
-                            <li class="first completed"><a 
-                                href="{% url simplekey-page 1 %}"><img
-                                src="/static/images/icons/start.png" 
-                                alt=""> Start</a></li>
-                                <li class="second completed"><a
-                                    href="{% url simplekey-pilegroup pilegroup.slug %}"><img
-                                    src="/static/images/icons/group.png"
-                                    alt=""> {{ pilegroup.name }}</a></li>
-                                <li class="third current"><a><img
-                                    src="/static/images/icons/subgroup.png"
-                                    alt=""> 
-                                    {{ pile.name }}</a></li>
+                                <li class="first completed"><a 
+                                    href="{% url simplekey-page 1 %}"><img
+                                    src="/static/images/icons/start.png" 
+                                    alt=""> Start</a></li>
                             {% endif %}
+                            <li class="second completed"><a 
+                                href="{% url simplekey-pilegroup pilegroup.slug %}"><img
+                                src="/static/images/icons/group.png" 
+                                alt=""> {{ pilegroup.name }}</a></li>
+                            <li class="third current"><a><img
+                                src="/static/images/icons/subgroup.png"
+                                alt=""> {{ pile.name }}</a></li>
+                            <li class="last upcoming"><a><img
+                                src="/static/images/icons/subgroup.png"
+                                alt=""> My Plant</a></li>
                         </ul>
                     </div><!--Closes #breadcrumb-->
 
