--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -889,7 +889,8 @@ h5.help {
     width: 92px;
     height: 32px;
     background: url(/static/images/layout/apply-btn.png) no-repeat 0 0 transparent;
-    text-indent: 9000px;
+    text-align: left;
+    text-indent: -9000px;
 }
 .working-area .apply-btn:hover {
     background-position: 0 -32px;
