Testing fix: filter "clear" link in the sidebar needs to not start with a <br> if the Firefox or Chrome selenium drivers are to be able to click on it.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1321 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -628,7 +628,12 @@ Sidebar Styles
 a.sidebarlink {
     color: #1a2e11;
 }
-
+#sidebar .clear-filter {
+    display: block;
+}
+#sidebar .clear-filter.hidden {
+    display: none;
+}
 
 /*******------
 Level 3 Id styles
