Glossary: don't underline the current page's letter on hover.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1324 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1521,6 +1521,9 @@ Glossary Page Styles
 #alphabet li.current a {
     color: #000;
 }
+#alphabet li.current a:hover {
+    text-decoration: none;
+}
 #alphabet li.inactive {
     color: #ccc;
 }
