Apply the visual design, minus two missing icons, to the search results page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1328 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_base.html
+++ b/gobotany/simplekey/templates/simplekey/_base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{% block title %}{% endblock %}: New England Wild Flower Society</title>
+        <title>{% block title %}{% endblock %}: Go Botany</title>
         <meta charset="utf-8">
         {% block js_top %}{% endblock %}
 
