--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -97,19 +97,7 @@
                 </div><!--closes #main-->
 
                 <div id="sidebar">
-
-                    <div class="section">
-                        <h5>Want help getting started?</h5>
-                        <p>If you're not sure what to do from here, take a look at this Help page for instructions.</p>
-                        <a class="get-help-btn" href="../help/start/">Get Help</a>
-                    </div><!--Closes .section-->
-
-                    <div class="section">
-                        <h5>Plant Map</h5>
-                        <p>If you already know what group your plant is in, start with the clickable plant map to find your plant more quickly.</p>
-                        <a class="view-map-btn" href="../map/">View Map</a>
-                    </div><!--Closes .section-->
-
+                    {% include "simplekey/_sidebar_items.html" %}
                 </div><!--Closes #sidebar-->
 
                 <div class="clearit"></div>
