Add more functional tests for search. Fix a functional test for the home page that I broke when changing page titles.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1333 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -1,6 +1,7 @@
 {% extends "simplekey/_base.html" %}
 
-{% block title %}Go Botany{% endblock %}
+{% block title %}Go Botany: New England Wild Flower Society{% endblock %}
+{% block title_suffix %}{% endblock %}
 
 {% block body %}
     <body id="home" class="claro top-level">
