--- a/gobotany/simplekey/templates/simplekey/_base.html
+++ b/gobotany/simplekey/templates/simplekey/_base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{% block title %}{% endblock %}: Go Botany</title>
+        <title>{% block title %}{% endblock %}{% block title_suffix %}: Go Botany{% endblock %}</title>
         <meta charset="utf-8">
         {% block js_top %}{% endblock %}
 
