--- a/gobotany/simplekey/templates/simplekey/family.html
+++ b/gobotany/simplekey/templates/simplekey/family.html
@@ -1,23 +1,94 @@
-{% extends "simplekey/_old_base.html" %}
+{% extends "simplekey/_base.html" %}
 {% load thumbnail %}
 {% load simplekey_extras %}
-{% block title %}
-Family {{ item.name }} ({% if item.common_name %}{{ item.common_name }}{% else %}common name here{% endif %})
-{% endblock %}
-{% block content %}
-  <h1>Family {{ item.name }}</h1>
-  <div id="family">
-    <h2>{% if item.common_name %}
-            {{ item.common_name }}
-        {% else %}
-            Common name here
-        {% endif %}</h2>
 
+{% block title %}
+Family: {{ family.name }} {% if common_name %}({{ common_name }}){% endif %}{% endblock %}
+
+{% block body %}
+    <body id="family" class="claro app family">
+        {% include "simplekey/_header.html" %}
+
+        <div class="content">
+            <div class="container">
+                <div id="main">
+                    <h2>Family: {{ family.name }}</h2>
+                    <h3>{% if common_name %}{{ common_name }}{% endif %}</h3>
+                    <p class="description">
+                    {% if item.description %}
+                        {{ item.description }}
+                    {% else %}
+                        TO DO: Add description in the database.
+                        This is a placeholder description.
+                        (Test glossary highlighting here with a few terms,
+                        such as abaxial, berry, creeping, fruit and
+                        perennial.)
+                    {% endif %}
+                    </p>
+                    
+                    <div class="familypics">
+                        {% for drawing in family_drawings %}
+                            <div>
+                                <a rel="shadowbox"
+                                    href="{{ drawing.image.url }}">
+                                    <img class="map"
+                                        src="{{ drawing.image.thumbnail.absolute_url }}"
+                                        alt="{{ drawing.alt }}"></a>
+                                <p>{{ drawing.alt }}</p>
+                                <a class="enlarge" rel="shadowbox"
+                                    href="{{ drawing.image.url }}">
+                                    <img class="zoom"
+                                    src="/static/images/icons/zoom.png"></a>
+                            </div>
+                        {% endfor %}
+                    </div>
+
+                    <h4>Genera in this Plant Family:</h4>
+                    <ul class="genera">
+                    {% for genus in family.genera.all %}
+                        <li><em><a href="{% url simplekey-genus genus.slug %}"
+                        >{{ genus.name }}</a></em></li>
+                    {% endfor %}
+                    </ul>
+
+                    <a class="family-genera-btn" href="#"></a>
+
+                </div>
+                <div id="sidebar" style="height: 634px;">
+                    {% include "simplekey/_sidebar_items.html" %}
+                </div>
+                <div class="clearit"></div>
+            </div>
+        </div>
+
+        {% include "simplekey/_footer.html" %}
+
+        {% include "simplekey/_script_constants.html" %}
+
+        <script>
+            {% include "simplekey/partner_site_inline_js.html" %}
+        </script>
+        
+        {% block js_bottom %}
+        <script>
+        API_URL = '{% url api-base %}';
+        dojo.require('gobotany.sk.family');
+        dojo.addOnLoad(function() {
+            gobotany.sk.family.init('{{ family.slug }}');
+        });
+        </script>
+        {% endblock %}
+    </body>
+{% endblock %}
+
+{# TODO: remove this code once it is confirmed that it will not be needed #}
+{% block content %}
+  <div id="family">
     <div id="images">
       <h3>Images</h3>
       <p>
-          {% if item_images %}
-              {% for i in item_images %}
+          {% if family_images %}
+              {% for i in family_images %}
                   {% if forloop.first %}
                       <img src="{{ i.image.url }}">
                   {% endif %}
@@ -32,8 +103,8 @@ Family {{ item.name }} ({% if item.common_name %}{{ item.common_name }}{% else %
 
     <div id="info">
       <h3>Description</h3>
-      <p>{% if item.description %}
-             {{ item.description }}
+      <p>{% if family.description %}
+             {{ family.description }}
          {% else %}
              This is a placeholder description.
              (Test glossary highlighting with the term isophyllous here.)
@@ -41,7 +112,7 @@ Family {{ item.name }} ({% if item.common_name %}{{ item.common_name }}{% else %
 
       <h3>Genera</h3>
       <ul class="Genera">
-        {% for genus in item.genera.all %}
+        {% for genus in family.genera.all %}
         <li><em><a href="{% url simplekey-genus genus.slug %}"
                    >{{ genus.name }}</a></em></li>
         {% endfor %}
@@ -49,10 +120,10 @@ Family {{ item.name }} ({% if item.common_name %}{{ item.common_name }}{% else %
 
       <h3>Species</h3>
       <ul class="Species">
-        {% for genus in item.genera.all %}
+        {% for genus in family.genera.all %}
         <li><em>{{ genus.name }}</em>:
             <ul>
-                {% for species in item.taxa.all %}
+                {% for species in family.taxa.all %}
                     {% ifequal genus.name|cut:' ' species.genus|cut:' ' %}
                         <li><a href="{% url simplekey-species species.genus.slug species.epithet %}"
                         ><em>{{ species.genus|make_list|first }}. {{ species.epithet }}</em></a></li>
@@ -79,7 +150,7 @@ Family {{ item.name }} ({% if item.common_name %}{{ item.common_name }}{% else %
       {% else %}
           {# temporary dummy presentation until we have data #}
           <div>
-              <img src="/static/nothing.png" alt="placeholder image 1">
+              <img src="/media/character-value/basal-lobes-absent-ap.gif" alt="placeholder image 1">
               <p>placeholder caption 1</p>
           </div>
           <div>
@@ -95,12 +166,3 @@ Family {{ item.name }} ({% if item.common_name %}{{ item.common_name }}{% else %
   </div>
 {% endblock %}
 
-{% block js_bottom %}
-  <script>
-      API_URL = '{% url api-base %}';
-      dojo.require('gobotany.sk.family');
-      dojo.addOnLoad(function() {
-          gobotany.sk.family.init('{{ item.slug }}');
-      });
-  </script>
-{% endblock %}
