--- a/gobotany/simplekey/templates/montshire/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/montshire/simplekey/help_start.html
@@ -1,8 +1,9 @@
 {% extends "simplekey/_help.html" %}
 
-{% block pagetitle %}
-Getting Started With Montshire
-{% endblock %}
+{% block pagetitle %}Getting Started With Montshire{% endblock %}
+
+{% block body_id %}getting-started{% endblock %}
+{% block body_class %}getting-started{% endblock %}
 
 {% block content %}
         <div class="content">
@@ -15,16 +16,15 @@ Getting Started With Montshire
                                     href="/help/start/"><img
                                     src="/static/images/icons/start.png" 
                                     alt=""> Start: Help</a></li>
-                                <li class="second upcoming"><a 
-                                    href="{% url simplekey-page 1 %}"><img
+                                <li class="second upcoming"><a><img
                                     src="/static/images/icons/group.png"
-                                    alt=""> Choose Group</a></li>
+                                    alt=""> Group</a></li>
                                 <li class="third upcoming"><a><img
                                     src="/static/images/icons/group.png" 
-                                    alt=""> Group</a></li>
+                                    alt=""> Subgroup</a></li>
                                 <li class="last upcoming"><a><img 
                                     src="/static/images/icons/subgroup.png" 
-                                    alt=""> Subgroup</a></li>
+                                    alt=""> My Plant</a></li>
                             {% else %}
                                 <li class="first completed"><a
                                     href="{% url simplekey-page 1 %}"><img
@@ -36,6 +36,9 @@ Getting Started With Montshire
                                 <li class="third upcoming"><a><img 
                                     src="/static/images/icons/subgroup.png" 
                                     alt=""> Subgroup</a></li>
+                                <li class="last upcoming"><a><img 
+                                    src="/static/images/icons/subgroup.png" 
+                                    alt=""> My Plant</a></li>
                             {% endif %}
                         </ul>
 			        </div><!--Closes #breadcrumb-->
@@ -219,36 +222,21 @@ Getting Started With Montshire
                 </div>
 
                 <div id="sidebar" style="height: 1046px">
-                    <div class="section" id="help-nav">
-                        <h5>Help</h5>
-                        <ul>
-                            {% url simplekey-help-about as u %}
-                            <li><a {% ifequal request.path u %}class="current"{% else %}href="{% url simplekey-help-about %}"{% endifequal %}>About Go-Botany</a></li>
-                            
-                            <li><p>How To Use Plant Identifier:</p>
-                                <ul>
-                                    {% url simplekey-help-start as u %}
-                                    <li><a {% ifequal request.path u %}class="current"{% else %}href="{% url simplekey-help-start %}"{% endifequal %}>Getting Started</a></li>
-                                    {% url simplekey-help-collections as u%}
-                                    <li><a {% ifequal request.path u %}class="current"{% else %}href="{% url simplekey-help-collections %}"{% endifequal %}>Understanding Plant Collections</a></li>
-                                </ul>
-                            </li>
-                            
-                            {% url simplekey-help-glossary0 as u %}
-                            <li><a {% ifequal request.path u %}class="current"{% else %}href="{% url simplekey-help-glossary0 %}"{% endifequal %}>Glossary</a></li>
-                            
-                            {% url simplekey-help-video as u %}
-                            <li><a {% ifequal request.path u %} class="current"{% else %}href="{% url simplekey-help-video %}"{% endifequal %}>Video Help Topics</a></li>
-                        
-                        </ul>
+                    <div class="section">
+                        <h5><a>Getting Started with Plant Identifier</a></h5>	
+			        </div>
+			        <div class="section">
+                        <h5><a class="sidebarlink" {% ifequal request.path u %}class="current"{% else %}href="{% url simplekey-help-about %}"{% endifequal %}>About Go-Botany</a></h5>
+			        </div>
+			        <div class="section">
+                        <h5><a class="sidebarlink" {% ifequal request.path u %}class="current"{% else %}href="{% url simplekey-help-collections %}"{% endifequal %}>Advanced Map to Groups</a></h5>
+			        </div>
+			        <div class="section">
+                        <h5><a class="sidebarlink" {% ifequal request.path u %}class="current"{% else %}href="{% url simplekey-help-glossary0 %}"{% endifequal %}>Glossary</a></h5>
+			        </div>
+			        <div class="section">
+                        <h5><a class="sidebarlink" {% ifequal request.path u %} class="current"{% else %}href="{% url simplekey-help-video %}"{% endifequal %}>Video Help Topics</a></h5>
                     </div>
-
-                    <!--<div class="section">
-        				<h5>Want Help Getting Started?</h5>
-                        <p>Click on "Get Help" if you get stuck or want more
-                            information.</p>
-				        <a class="get-help-btn" href="/help/">Get Help</a>
-                    </div>-->
                     
                     <div class="section">
                         <h5>Watch Video</h5>
@@ -273,10 +261,9 @@ Getting Started With Montshire
 
 {% block js_bottom %}
     <script>
-        dojo.require('gobotany.sk.help_start');
+        dojo.require('gobotany.sk.GettingStartedHelper');
 
-        dojo.addOnLoad(function() {
-            gobotany.sk.help_start.init();
-        });
+        var getting_started_helper = gobotany.sk.GettingStartedHelper();
+        getting_started_helper.setup();
     </script>
 {% endblock %}
