Properly resize the page sidebar when the sidebar contents are taller than the main content area.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1348 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -208,7 +208,8 @@
                     <h5>US Distribution</h5>
                     <img
                         src="http://bonap.org/BONAPmaps2010/map%20sized/{{ scientific_name }}.png"
-                        alt="US Map" class="map" style="width: 193px">
+                        alt="US Map" class="map"
+                        style="height: 134px; width: 193px">
                         <a class="enlarge"
                             href="http://bonap.org/BONAPmaps2010/map%20sized/{{ scientific_name }}.png"
                             rel="shadowbox"><img 
