Bug fix: make characters and values on the species page display the friendly character  names and values as is done on the pile/results page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1350 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -99,22 +99,10 @@
                 
                 <h3>Characteristics</h3>
                 <ul class="characteristics">
-                    {% if characteristics %}
-                        {% for characteristic in characteristics %}
-                            <li>{{ characteristic.name|upper }}:
-                            {% for character_value in taxon.character_values.all %}
-                                {% if character_value.character.name|lower == characteristic.name|lower %}
-                                    {% if character_value.character.value_type == 'TEXT' %}
-                                        {{ character_value.value_str }}
-                                    {% else %}
-                                        {{ character_value.value_min }}
-                                        {{ character_value.character.unit }} to
-                                        {{ character_value.value_max }}
-                                        {{ character_value.character.unit }}
-                                    {% endif %}
-                                {% endif %}
-                            {% endfor %}
-                            </li>
+                    {% if brief_characteristics %}
+                        {% for character in brief_characteristics %}
+                            <li>{{ character.name|upper }}:
+                                {{ character.value }}</li>
                         {% endfor %}
                     {% else %}
                         <li>
